# TrackingTK

./: CMakeLists.txt  README.md  README.rst  trackingtk-config.in
devel/: build.bash
sntk/: datamodels.cpp  datamodels.hpp  geometry.cpp  geometry.hpp  tracking_module.cpp  tracking_module.hpp
sntk/notracking/: no_tracking_driver.cpp  no_tracking_driver.hpp  viewer.cpp  viewer.hpp  working_data.cpp  working_data.hpp
test/: CMakeLists.txt
test/test1/: reco.conf.in  run.bash  sd.brio  simu.conf
